NLP TP/texts/robotics/robotics.stackexchange_0000069774.txt
Q:

Error compiling web_video_server

On Ubuntu 14.04 using ros indigo, I get this error:
/localhome/demo/catkin_ws/src/web_video_server/src/ros_compressed_streamer.cpp: In member function ‘void web_video_server::RosCompressedStreamer::imageCallback(const CompressedImageConstPtr&)’:
/localhome/demo/catkin_ws/src/web_video_server/src/ros_compressed_streamer.cpp:32:90: error: no matching function for call to ‘web_video_server::MultipartStream::sendPart(const _stamp_type&, std::string&, boost::asio::const_buffers_1, const CompressedImageConstPtr&)’
     stream_.sendPart(msg->header.stamp, content_type, boost::asio::buffer(msg->data), msg);
                                                                                          ^
/localhome/demo/catkin_ws/src/web_video_server/src/ros_compressed_streamer.cpp:32:90: note: candidate is:
In file included from /localhome/demo/catkin_ws/src/web_video_server/include/web_video_server/ros_compressed_streamer.h:8:0,
                 from /localhome/demo/catkin_ws/src/web_video_server/src/ros_compressed_streamer.cpp:1:
/localhome/demo/catkin_ws/src/web_video_server/include/web_video_server/multipart_stream.h:18:8: note: void web_video_server::MultipartStream::sendPart(const ros::Time&, const string&, const boost::asio::const_buffer&, async_web_server_cpp::HttpConnection::ResourcePtr)
   void sendPart(const ros::Time &time, const std::string& type, const boost::asio::const_buffer &buffer,
        ^
/localhome/demo/catkin_ws/src/web_video_server/include/web_video_server/multipart_stream.h:18:8: note:   no known conversion for argument 4 from ‘const CompressedImageConstPtr {aka const boost::shared_ptr<const sensor_msgs::CompressedImage_<std::allocator<void> > >}’ to ‘async_web_server_cpp::HttpConnection::ResourcePtr {aka boost::shared_ptr<void>}’
make[2]: *** [web_video_server/CMakeFiles/web_video_server.dir/src/ros_compressed_streamer.cpp.o] Error 1
make[1]: *** [web_video_server/CMakeFiles/web_video_server.dir/all] Error 2
make: *** [all] Error 2

I have opencv 2.4.8 in /usr/lib/x86_64/ and opencv 3 in /usr/local/lib and pkg-config only finds opencv 3. I changed the CMakeLists to find opencv 2.4.8 but still same error.

Originally posted by Mehdi. on ROS Answers with karma: 3339 on 2015-09-24
Post score: 0

A:

The problem was async_web_server_cpp. I cloned it as well and compiled it then compiled web_video_server. It compiled with no errors.

Originally posted by Mehdi. with karma: 3339 on 2015-09-24
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by BennyRe on 2015-09-24:
Please mark your answer as correct.

